workshop04/myweather-app.yaml
---
kind: Deployment
apiVersion: apps/v1

metadata:
    name: myweatherapp-deploy
    namespace: myns
    labels:
        app: myweatherapp-deploy
        
spec:
    replicas: 1
    selector:
        matchLabels:
            app: myweatherapp-pod
    template:
        metadata:
            name: myweather-app-pod
            labels:
                app: myweather-app-pod
                version: v1
        spec:
            containers:
            - name: myweather-app
              image: stackupiss/weather:v1
              imagePullPolicy: Always
              resources:
                requests:
                    cpu: 100m
                limits:
                    cpu: 100m
            ports:
            - name: myapp-port
            containerPort: 3000

---
kind: Service
apiVersion: v1

metadata:
    name: myweatherapp-svc
    namespace: myns
    labels:
        app: myweatherapp-svc

spec:
    type: ClusterIP
    selector:
        app: myweatherapp-pod
    ports:
    - name: myweatherapp-svc-port
      port: 80
      targetPort: myweatherapp-port
