workshop04/myweather-ing.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1

metadata:
    name: myweatherapp-ing
    namespace: myns
    labels:
        name: myweatherapp-ing
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$2
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
        
spec:
    rules:
    - http:
        paths:
        - path: /(/|$)(.*) 
          backend:
            serviceName: myweatherapp-svc
            servicePort: 80
        - path: /
          backend:
            serviceName: myweatherapp-svc
            servicePort: 300
