workshop04/weather-app_bak.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: weatherns
  labels:
    app: weather-app

kind: Secret
apiVersion : v1
metadata:
  name: weather-secret
  namespace: weatherns
  labels: 
      app: weather-secret
      version: v1
  data:
    app_id: ZDhhOWE5ODI2MzA1NjcwM2QwNjY1YWY1Yjk5NjM3ZTk=


kind: Deployment
apiVersion: apps/v1
metadata:
  name: weather-deploy
  namespace: weatherns
  labels: 
      app: weather-app
      version: v1
spec: 
  replicas: 2
  selector:
    matchLabels:
      name: weather-pod
  template:
    metadata:
      name: weather-pod
      labels:
        app: weather-app
        name: weather-pod
    spec:
      containers:
        - name: weather
          image: stackupiss/weather:v1
          imagePullPolicy: Always
          ports:
          - name: weather-port
            containerPort: 3000
          readinessProbe:
            httpGet: 
              path: /ready
              port: weather-port
            periodSeconds: 60
          livenessProbe:
            httpGet: 
              path: /health
              port: weather-port
            periodSeconds: 60
          resources:
            requests: 
              cpu: 100m
              memory: 16m
#           limits:
#            cpu: 150m
#           memory: 32m
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 2


---
kind: Service
apiVersion: v1

metadata:
    name: weather-svc
    namespace: weatherns
    labels:
        app: weather-app

spec:
    type: ClusterIP
    selector:
        name: weather-pod
    ports:
    - name: weather-svc-port 
      port: 3000
      targetPort: weather-port

---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1


metadata:
    name: weather-ing
    namespace: weatherns
    labels:
        app: weather-app
        
spec:
    rules:
    - host: weather.oneminutedistraction.com
      http:
        paths:
        - path: /
          backend:
            serviceName: weather-svc
            servicePort: 3000
